# global-ledger-consistency-lab

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  sonar-project.properties
.github/workflows/: sonar.yml
infra/: docker-compose.yml  prometheus.yml
scripts/: NEXT_STEPS.md  bootstrap.sh  migrate.sh  run_application_tests.py  run_experiment.py
services/ledger-worker/: pyproject.toml
services/ledger-worker/ledger_worker/: main.py
services/ledger-worker/ledger_worker/core/: config.py  errors.py
services/ledger-worker/ledger_worker/db/: session.py
services/ledger-worker/ledger_worker/repositories/: domain_repository.py  outbox_repository.py
services/ledger-worker/ledger_worker/services/: failure_injector.py  mode_strategies.py  processor.py  reconciliation.py
services/ledger-worker/ledger_worker/telemetry/: metrics.py  otel.py
services/ledger-worker/tests/: conftest.py  test_worker_core.py
services/payments-api/: pyproject.toml
services/payments-api/payments_api/: main.py
services/payments-api/payments_api/api/: dependencies.py  routes_internal.py  routes_payments.py
services/payments-api/payments_api/core/: config.py  errors.py
services/payments-api/payments_api/db/: migrate.py  session.py
services/payments-api/payments_api/repositories/: accounts_repository.py  idempotency_repository.py  ledger_repository.py  outbox_repository.py  payments_repository.py
services/payments-api/payments_api/telemetry/: metrics.py  otel.py
services/payments-api/payments_api/use_cases/: create_payment.py  mode_strategies.py
services/payments-api/tests/: conftest.py  test_payments.py
shared/: README.md  pyproject.toml
shared/src/shared/contracts/: __init__.py  messages.py  models.py
shared/src/shared/db/: __init__.py  orm_models.py
tests/integration/: test_integration_placeholder.py
tests/stress/: test_stress_placeholder.py
tests/unit/: test_unit_placeholder.py
